# funguild

./: .gitignore  Cargo.toml  README.md  test.txt
src/: cli.rs  main.rs  utils.rs
